syntax = "proto3";
package Protobuf.S2C;

message LoginResult
{
    bool loginSuccess = 1;
    string SessionTicket = 2;
}
